# Dr-Blockchain

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  .railwayignore  .vercelignore  AI_TRANSPARENCY_SUMMARY.md  BACKEND_ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  Dockerfile  FINAL_DEPLOYMENT_SUMMARY.md  GITHUB_UPLOAD_GUIDE.md  HACKATHON_SUBMISSION.md  KEY_ROTATION.md  LICENSE  MIT License.md  Makefile  OQS_FIX_GUIDE.md  README.md  README_DRP_STORAGE.md  RENDER_DEPLOYMENT.md  ROADMAP.md  SECURITY.md  STORAGE_ARCHITECTURE.md  TODO.md  TOKENS.md  VERCEL_DEPLOYMENT.md  __init__.py  app.py  blockchain.py  build_asm.sh  client_gRPC.py  (+37 more)
.github/: SECURITY.md
.test_keystore/: keys.enc
agents/: __init__.py  activity_verification_agent.py  fraud_detection_agent.py  governance_agent.py  rights_validator_agent.py
ai/: __init__.py  activity_classifier.py  elder_core.py  fastapi_server.py  quantum_security.py  status_evaluator.py
ai_transparency_service/: __init__.py  db.py
ai_verification/: __init__.py  cv_face_verification.py  integration.py  nlp_voice_command.py
api/: __init__.py  activity.py  agent.py  ai_routes.py  auth.py  public.py  rewards.py  router.py  scoring.py  user.py  verification.py
audit/: __init__.py  logger.py
blockchain/: __init__.py  drp_client.py  event_listener.py  node.py
chain/: .env.chain.example  Makefile  README.md  go.mod
config/: __init__.py  env_loader.py  settings.py
core/: __init__.py
db/: __init__.py  indexer.py  requirements.txt
docker/: Dockerfile.drp-ai  Dockerfile.drp-node  README.md  SERVICE_CONNECTIONS.md  nginx.conf  start-drp.sh
docs/: ai-elders.md  ai_transparency.md  consensus.md
examples/: ai_transparency_demo.py  post_quantum_demo.py  storage_demo.py
hybrid-orbitdb-ipfs/: docker-compose.yml
ledger/: __init__.py  anchor.py  elders.py
monitoring/: prometheus.yml
network/: __init__.py  block_builder.py  node_state.json  rpc_server.py  transaction_pool.py
orbitdb/: activity_store.js  ipfs_client.js  orbit_manager.js  package.json  peer_id.txt  status_store.js
src/: README.md  (+2 more)
(+238 files in other folders)
